--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/application.css">
   <script src="./bundle.js"></script>
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="svg-container">
+    <svg width="1500" height="1500"></svg>
+  </div>
 </body>
 </html>
