add function to order arc by group

--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="svg-container">
-    <svg width="800" height="800"></svg>
+  <div class="navbar">
+    <select name="" id="svg-type">
+      <option value="">Select Diagram</option>
+      <option value="force">Force Diagram</option>
+      <option value="arc">Arc Diagram</option>
+    </select>
+
+    <select name="" id="order">
+      <option value="countries">countries</option>
+      <option value="passengers">passenger flow</option>
+      <option value="destinations">number of connections</option>
+    </select>
   </div>
+  <div class="svg-container"></div>
 </body>
 </html>
