--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <option value="destinations">number of connections</option>
     </select>
   </div>
-  <div class="svg-container"></div>
+  <div class="main-content">
+    <div class="svg-container"></div>
+  </div>
 </body>
 </html>
