add airport info box

--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
   </div>
   <div class="main-content">
     <div class="svg-container"></div>
+    <div class="right">
+      <!-- <button id="reset">Reset</button> -->
+      <div class="info-box">
+        <h2></h2>
+        <h2></h2>
+        <p></p>
+        <p></p>
+        <p></p>
+        <ul id="connections"></ul>
+      </div>
+    </div>
   </div>
 </body>
 </html>
