--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/application.css">
+  <link rel="icon" href="./assets/images/favicon.ico" />
   <script src="./bundle.js"></script>
-  <title>Document</title>
+  <title>Flight connectivity</title>
 </head>
 <body>
   <div class="navbar">
