add selection filter

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
   <div class="main-content">
     <div class="svg-container"></div>
     <div class="right">
-      <!-- <button id="reset">Reset</button> -->
+      <div class="filter-box">
+        <form action="" id="filter-form">
+          <button>Submit</button>
+        </form>
+      </div>
       <div class="info-box">
         <h2></h2>
         <h2></h2>
