add filter functions

--- a/index.html
+++ b/index.html
@@ -14,21 +14,17 @@
       <option value="force">Force Diagram</option>
       <option value="arc">Arc Diagram</option>
     </select>
-
+<!-- 
     <select name="" id="order">
       <option value="countries">countries</option>
-      <option value="passengers">passenger flow</option>
+      <option value="passengers">passenger number</option>
       <option value="destinations">number of connections</option>
-    </select>
+    </select> -->
   </div>
   <div class="main-content">
     <div class="svg-container"></div>
     <div class="right">
-      <div class="filter-box">
-        <form action="" id="filter-form">
-          <button>Submit</button>
-        </form>
-      </div>
+
       <div class="info-box">
         <h2></h2>
         <h2></h2>
@@ -37,7 +33,11 @@
         <p></p>
         <ul id="connections"></ul>
       </div>
+      <div class="filter-box"></div>
     </div>
   </div>
 </body>
 </html>
+<!-- <form action="" id="filter-form">
+          <button>Submit</button>
+        </form> -->
