--- a/index.html
+++ b/index.html
@@ -24,7 +24,33 @@
   <div class="main-content">
     <div class="svg-container"></div>
     <div class="right">
-
+      <div class="instructions show">
+        <h2>Flight Connectivity Instructions!</h2>
+        <p>It is a visualization of airports' connectivity.</p>
+        <p>There are two digrams, <strong>Force</strong> and <strong>Arc</strong>.</p>
+        <div class="diagram-instructions">
+          <p>
+            For Force digram, each nodes represent an airport, while an edge means 
+            there is a direct rounte between these airports. By default, it shows the
+            connectivity between Top 50 Busiest Airports around the globe. You can also
+            choose airports to display as you wish!
+          </p>
+          <ul>
+            <li>
+              Hover over an airport to show its connectivity with others. 
+            </li>
+            <li>
+              Click on an airport to display airport's info. 
+            </li>
+            <li>
+              Drag an airport to see how it interacts with other nodes!
+            </li>
+          </ul>
+        </div>
+        <div class="diagram-instructions">For Arc diagram, it sorts the order of Top 20 airports as you wish!
+          Hover over an airport to show its connectivity with others.
+        </div>
+      </div>
       <div class="info-box">
         <h2></h2>
         <h2></h2>
