--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/application.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css"
+      integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/application.scss">
   <link rel="icon" href="./assets/images/favicon.ico" />
   <script src="./bundle.js"></script>
   <title>Flight connectivity</title>
 </head>
 <body>
   <div class="navbar">
-    <select name="" id="svg-type">
+    <h1>Flight Connectivity <i class="fas fa-plane"></i></h1>
+    <select class="form-control" id="svg-type">  
       <option value="">Select Diagram</option>
       <option value="force">Force Diagram</option>
       <option value="arc">Arc Diagram</option>
@@ -25,8 +28,8 @@
     <div class="svg-container"></div>
     <div class="right">
       <div class="instructions show">
-        <h2>Flight Connectivity Instructions!</h2>
-        <p>It is a visualization of airports' connectivity.</p>
+        <h2>Welcome to Flight Connectivity!</h2>
+        <p>A visualization of airports' connectivity.</p>
         <p>There are two digrams, <strong>Force</strong> and <strong>Arc</strong>.</p>
         <div class="diagram-instructions">
           <p>
@@ -37,27 +40,32 @@
           </p>
           <ul>
             <li>
-              Hover over an airport to show its connectivity with others. 
+              <i class="fas fa-plane"></i>
+              <strong>Hover</strong> over an airport to show its connectivity with others. 
             </li>
             <li>
-              Click on an airport to display airport's info. 
+              <i class="fas fa-plane"></i>
+              <strong>Click</strong>  on an airport to display airport's info. 
             </li>
             <li>
-              Drag an airport to see how it interacts with other nodes!
+              <i class="fas fa-plane"></i>
+              <strong>Drag</strong>  an airport to see how it interacts with other nodes!
             </li>
           </ul>
         </div>
-        <div class="diagram-instructions">For Arc diagram, it sorts the order of Top 20 airports as you wish!
-          Hover over an airport to show its connectivity with others.
+        <div class="diagram-instructions">
+          <p>
+            For Arc diagram, it sorts the order of Top 20 airports as you wish!
+            <ul>
+              <li>
+                <i class="fas fa-plane"></i>
+                <strong>Hover</strong> over an airport to show its connectivity with others.
+              </li>
+            </ul>
+          </p>
         </div>
       </div>
       <div class="info-box">
-        <h2></h2>
-        <h2></h2>
-        <p></p>
-        <p></p>
-        <p></p>
-        <ul id="connections"></ul>
       </div>
       <div class="filter-box"></div>
     </div>
