--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <div class="instructions show">
         <h2>Welcome to Flight Connectivity!</h2>
         <p>A visualization of airports' connectivity.</p>
-        <p>There are two digrams, <strong>Force</strong> and <strong>Arc</strong>.</p>
+        <p>There are two diagrams, <strong>Force</strong> and <strong>Arc</strong>.</p>
         <div class="diagram-instructions">
-          <h3>Force digram</h3>
+          <h3>Force diagram</h3>
           <p>
             Each node represents an airport, while an edge means 
             there is a direct route between these airports. 
