--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 </head>
 <body>
   <div class="navbar">
-    <div></div>
-    <select class="form-control" id="svg-type">  
-      <option value="">Home page</option>
-      <option value="force">Force Diagram</option>
-      <option value="arc">Arc Diagram</option>
-    </select>
+    <div class="logo"></div>
+    <div class="select-box">
+      <select class="form-control select" id="svg-type">  
+        <option value="">Home page</option>
+        <option value="force">Force Diagram</option>
+        <option value="arc">Arc Diagram</option>
+      </select>
+    </div>
   </div>
   <div class="main-content">
     <div class="svg-container"></div>
